--- a/0x0A-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x0A-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -3,10 +3,10 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
-msgid "home_title"
-msgstr "Welcome to Holberton"
-msgid "home_header"
-msgstr "Hello world!"
+msgid ""
+msgstr ""
+msgid ""
+msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2021-04-22 17:56-0500\n"
