--- a/0x0A-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x0A-i18n/translations/en/LC_MESSAGES/messages.po
@@ -20,3 +20,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.0\n"
 
+#: templates/3-index.html:1
+msgid "home_title"
+msgstr "Welcome to Holberton"
+
+#: templates/3-index.html:2
+msgid "home_header"
+msgstr "Hello world!"
